--- a/Components/Views/acMainToolbar.ui
+++ b/Components/Views/acMainToolbar.ui
@@ -27,9 +27,6 @@
    <property name="statusTip">
     <string>Open</string>
    </property>
-   <property name="PV_MUST_BE_MASTER_TO_SHOW" stdset="0">
-    <bool>true</bool>
-   </property>
   </action>
   <action name="actionSaveData">
    <property name="icon">
@@ -39,8 +36,8 @@
    <property name="text">
     <string>Save Data...</string>
    </property>
-   <property name="PV_MUST_BE_MASTER_TO_SHOW" stdset="0">
-    <bool>true</bool>
+   <property name="statusTip">
+    <string>Save Data</string>
    </property>
   </action>
   <action name="actionUndo">
@@ -51,6 +48,12 @@
    <property name="text">
     <string>&amp;Undo</string>
    </property>
+   <property name="toolTip">
+    <string>Undo Operation</string>
+   </property>
+   <property name="statusTip">
+    <string>Undo Operation</string>
+   </property>
   </action>
   <action name="actionRedo">
    <property name="icon">
@@ -59,6 +62,12 @@
    </property>
    <property name="text">
     <string>&amp;Redo</string>
+   </property>
+   <property name="toolTip">
+    <string>Redo Operation</string>
+   </property>
+   <property name="statusTip">
+    <string>Redo Operation</string>
    </property>
   </action>
   <addaction name="actionOpenData"/>
