--- a/Components/Views/acMainToolbar.ui
+++ b/Components/Views/acMainToolbar.ui
@@ -19,7 +19,7 @@
   <action name="actionOpenData">
    <property name="icon">
     <iconset resource="../../Resources/Icons/icons.qrc">
-     <normaloff>:/Icons/fileopen.png</normaloff>:/Icons/fileopen.png</iconset>
+     <normaloff>:/Icons/open</normaloff>:/Icons/open</iconset>
    </property>
    <property name="text">
     <string>Open...</string>
@@ -31,7 +31,7 @@
   <action name="actionSaveData">
    <property name="icon">
     <iconset resource="../../Resources/Icons/icons.qrc">
-     <normaloff>:/Icons/filesave.png</normaloff>:/Icons/filesave.png</iconset>
+     <normaloff>:/Icons/save</normaloff>:/Icons/save</iconset>
    </property>
    <property name="text">
     <string>Save Data...</string>
@@ -43,7 +43,7 @@
   <action name="actionUndo">
    <property name="icon">
     <iconset resource="../../Resources/Icons/icons.qrc">
-     <normaloff>:/Icons/help.png</normaloff>:/Icons/help.png</iconset>
+     <normaloff>:/Icons/undo</normaloff>:/Icons/undo</iconset>
    </property>
    <property name="text">
     <string>&amp;Undo</string>
@@ -58,7 +58,7 @@
   <action name="actionRedo">
    <property name="icon">
     <iconset resource="../../Resources/Icons/icons.qrc">
-     <normaloff>:/Icons/help.png</normaloff>:/Icons/help.png</iconset>
+     <normaloff>:/Icons/redo</normaloff>:/Icons/redo</iconset>
    </property>
    <property name="text">
     <string>&amp;Redo</string>
