--- a/Components/Views/acMainWindow.ui
+++ b/Components/Views/acMainWindow.ui
@@ -87,6 +87,23 @@
     <bool>false</bool>
    </attribute>
   </widget>
+  <widget class="acSelectionToolbar" name="selectionToolBar">
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>22</width>
+     <height>22</height>
+    </size>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
   <widget class="QDockWidget" name="selectionViewDock">
    <property name="windowTitle">
     <string>Selection View</string>
@@ -125,6 +142,11 @@
    <class>acCameraToolbar</class>
    <extends>QToolBar</extends>
    <header>Components/Toolbars/acCameraToolbar.h</header>
+  </customwidget>
+  <customwidget>
+   <class>acSelectionToolbar</class>
+   <extends>QToolBar</extends>
+   <header>Components/Toolbars/acSelectionToolbar.h</header>
   </customwidget>
   <customwidget>
    <class>acSelectionInfoWidget</class>
