--- a/Components/Views/acEditMenu.ui
+++ b/Components/Views/acEditMenu.ui
@@ -7,7 +7,7 @@
   </property>
   <action name="actionUndo">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/undo</normaloff>:/Icons/undo</iconset>
    </property>
    <property name="text">
@@ -19,7 +19,7 @@
   </action>
   <action name="actionRedo">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/redo</normaloff>:/Icons/redo</iconset>
    </property>
    <property name="text">
@@ -30,7 +30,7 @@
   <addaction name="actionRedo"/>
  </widget>
  <resources>
-  <include location="../../Resources/Icons/icons.qrc"/>
+  <include location="../../Resources/acIcons.qrc"/>
  </resources>
  <connections/>
 </ui>
