--- a/Components/Views/acFileMenu.ui
+++ b/Components/Views/acFileMenu.ui
@@ -7,7 +7,7 @@
   </property>
   <action name="actionOpenData">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/open</normaloff>:/Icons/open</iconset>
    </property>
    <property name="text">
@@ -19,7 +19,7 @@
   </action>
   <action name="actionSaveData">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/save</normaloff>:/Icons/save</iconset>
    </property>
    <property name="text">
@@ -40,7 +40,7 @@
   <addaction name="actionExit"/>
  </widget>
  <resources>
-  <include location="../../Resources/Icons/icons.qrc"/>
+  <include location="../../Resources/acIcons.qrc"/>
  </resources>
  <connections/>
 </ui>
