--- a/Components/Views/acMainToolbar.ui
+++ b/Components/Views/acMainToolbar.ui
@@ -18,7 +18,7 @@
   </property>
   <action name="actionOpenData">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/open</normaloff>:/Icons/open</iconset>
    </property>
    <property name="text">
@@ -30,7 +30,7 @@
   </action>
   <action name="actionSaveData">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/save</normaloff>:/Icons/save</iconset>
    </property>
    <property name="text">
@@ -42,7 +42,7 @@
   </action>
   <action name="actionUndo">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/undo</normaloff>:/Icons/undo</iconset>
    </property>
    <property name="text">
@@ -57,7 +57,7 @@
   </action>
   <action name="actionRedo">
    <property name="icon">
-    <iconset resource="../../Resources/Icons/icons.qrc">
+    <iconset resource="../../Resources/acIcons.qrc">
      <normaloff>:/Icons/redo</normaloff>:/Icons/redo</iconset>
    </property>
    <property name="text">
@@ -77,7 +77,7 @@
   <addaction name="actionRedo"/>
  </widget>
  <resources>
-  <include location="../../Resources/Icons/icons.qrc"/>
+  <include location="../../Resources/acIcons.qrc"/>
  </resources>
  <connections/>
 </ui>
